--- a/index.html
+++ b/index.html
@@ -352,9 +352,8 @@
                         <img src="img/portfolio/fifty.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>50 Years of Change</h4>
-                        <p class="text-muted"><b><a href="http://50yearsofchange.com/" target="_blank">2013 NACIS Narrative Map Winner</b></a>
-                        </p>
+                        <h4>2013 NACIS Narrative Map Winner</h4>
+                    
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -367,7 +366,7 @@
                         <img src="img/portfolio/petro.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4><a href="./sites/petroleum/index.html" target="_blank">Total Petroleum Consumption, 2011</a></h4>
+                        <h4>Total Petroleum Consumption, 2011</h4>
                         <p class="text-muted"></p>
                     </div>
                 </div>
@@ -381,7 +380,7 @@
                         <img src="img/portfolio/wolf.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4><a href="./sites/wolves/index.html" target="_blank">NW US: Wolf Pack Population Change</a></h4>
+                        <h4>NW US: Wolf Pack Population Change</h4>
                         <p class="text-muted"></p>
                     </div>
                 </div>
@@ -395,8 +394,8 @@
                         <img src="img/portfolio/cher.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>The Chernobyl Disaster</h4>
-                        <p class="text-muted"><a href="sites/chernobyl/ChernobylFinal_23.html" target="_blank"><b>2010 NACIS Interactive Map Winner</b></a></p>
+                        <h4>2010 NACIS Interactive Map Winner</h4>
+
                     </div>
                 </div>
             </div>   
