--- a/index.html
+++ b/index.html
@@ -841,6 +841,39 @@
             </div>
 
 
+            <div class="portfolio-modal modal fade" id="AugmodEight" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal">
+                        <div class="lr">
+                            <div class="rl">
+                            </div>
+                            </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 col-lg-offset-2">
+                                <div class="modal-body">
+                                    <!-- Project Details Go Here -->
+                                    <h2>NFWF Publications</h2>
+                                    <img class="img-responsive img-centered" src="img/portfolio/full/globalmadison.png" alt="">
+                                    <p class="item-intro text-muted">
+                                            In a cartography seminar, we explored the design and usability of mobile maps through a case study mobile website called Global Madison,
+                                            which emphasizes the concept of "situated learning" and became a module for a Global Studies course at UW-Madison (GS 101).
+                                            <br>
+                                            I was on the design team, where we did research on mobile navigation, user interaction, and also determined the final mobile and browser design.
+                                            <br>
+                                            To see the application used in class, visit 
+                                        </p>
+                                
+                                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
    <!-- Portfolio Modal 1 -->
 
 
