--- a/index.html
+++ b/index.html
@@ -394,6 +394,17 @@
 
 
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#AugmodEight" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/global.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioMod2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -862,7 +873,7 @@
                                             <br>
                                             I was on the design team, where we did research on mobile navigation, user interaction, and also determined the final mobile and browser design.
                                             <br>
-                                            To see the application used in class, visit 
+                                            To see the final application used in class, visit <a href="https://geography.wisc.edu/globalmadison" target="_blank"></a>Global Madison: Paths to Change</a>
                                         </p>
                                 
                                     <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
