--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                                 <h2>Red Knot Graphic</h2>
                                 <img class="img-responsive img-centered" src="img/portfolio/full/knot.jpg" alt="">
                                 <p class="item-intro text-muted">
-                                       I designed the graphic and t-shirt for the annual NFWF trip to the Delaware shore, where staff aid in collection of data for the red knot migration, as well as data for <a href="https://twitter.com/run_for_funner/status/998956413681451009" target="_blank">other species.</a>
+                                       I designed the graphic and t-shirt for the annual NFWF trip to the Delaware shore: staff aid in collection of data for the red knot migration, as well as data for <a href="https://twitter.com/run_for_funner/status/998956413681451009" target="_blank">other species.</a>
                                 </p>
                             
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
