--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
                             <div class="col-lg-8 col-lg-offset-2">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here -->
-                                    <h2><a href="https://geography.wisc.edu/globalmadison" target="_blank"></a>Global Madison: Paths to Change</a></h2>
+                                    <h2><a href="https://geography.wisc.edu/globalmadison" target="_blank">Global Madison: Paths to Change</a></h2>
                                     <img class="img-responsive img-centered" src="img/portfolio/full/globalmadison.png" alt="">
                                     <p class="item-intro text-muted">
                                             In a cartography seminar, we explored the design and usability of mobile maps through a case study mobile website called Global Madison,
