--- a/index.html
+++ b/index.html
@@ -1354,8 +1354,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>International Learning Community Logo</h2>
-                            <p class="item-intro text-muted">When the ILC of UW-Madison saw my hand painted watercolor art of something similar, they requested
-                            a version that could be used as a logo. This PNG, created using a tablet and Photoshop, is the result.</p>
+                            <p class="item-intro text-muted"> ILC of UW-Madison logo, created using a tablet and Photoshop</p>
                             <img class="img-responsive img-centered" src="img/portfolio/full/ILC.jpg" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
