--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Vanessa Knoppke-Wetzel</title>
-    <link rel="shortcut icon" href="img/wolf.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/wolf1.ico" type="image/x-icon" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
