--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/ofdasmall.ico" class="img-responsive" alt="">
+                        <img src="img/portfolio/ofdasmall.png" class="img-responsive" alt="">
                     </a>
                 </div>
 
