--- a/index.html
+++ b/index.html
@@ -460,7 +460,9 @@
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <p class="large text-muted">
-                     + <a href="https://creativecarto.github.io" target="_blank">#CreativeCarto:</a> Organized international online and in person meetup to work/learn/share carto projects. See link or portfolio above for more details.
+                     + <a href="https://atlasofdesign.bigcartel.com/" target="_blank">Volunteer</a>: An editor for the upcoming Atlas of Design, Volume 5
+                     <br>
+                     + <a href="https://creativecarto.github.io" target="_blank">#CreativeCarto:</a> Organized international online and in person meetup to work/learn/share carto projects. See link or portfolio above for more details
                      <br>
                     + <a href="https://www.youtube.com/watch?v=lFkwCdH5B7g" target="_blank">Talk </a>NACIS 2018, Branding in Cartography
                     <br>
