--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <p class="large text-muted">
                      + <a href="https://atlasofdesign.bigcartel.com/" target="_blank">Volunteer</a>: An editor for the upcoming Atlas of Design, Volume 5
                      <br>
-                     + <a href="https://creativecarto.github.io" target="_blank">#CreativeCarto:</a> Organized international online and in person meetup to work/learn/share carto projects. See link or portfolio above for more details
+                     + <a href="https://creativecarto.github.io" target="_blank">#CreativeCarto founder:</a> Organized international online and in person meetup to work/learn/share carto projects. See link or portfolio above for more details
                      <br>
                     + <a href="https://www.youtube.com/watch?v=lFkwCdH5B7g" target="_blank">Talk </a>NACIS 2018, Branding in Cartography
                     <br>
