--- a/index.html
+++ b/index.html
@@ -510,6 +510,8 @@
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <p class="large text-muted">
+                    + Upcoming <a href="https://nacis2019.sched.com/event/Rqpq/practical-cartography-day-late-afternoon-session" target="_blank">Talk</a>: NACIS 2019, Recreating Map Monsters<br> (and Other Useful Design Tips)
+                    <br>
                      + <a href="https://atlasofdesign.bigcartel.com/" target="_blank">Volunteer</a>: An editor for the upcoming Atlas of Design, Volume 5
                      <br>
                      + <a href="https://creativecarto.github.io" target="_blank">#CreativeCarto founder:</a> Organized international online and in person meetup to work/learn/share carto projects. See link or portfolio above for more details
@@ -532,7 +534,7 @@
                     <br>
                     + <a href="https://www.meetup.com/Maptime-DC/events/237559690/" target="_blank">Talk</a>: February 2017 Maptime DC<a href="https://drive.google.com/file/d/0B6ADBah3ubHsQjhSajVScnBRMjQ/view" target="_blank"> talk</a> on aesthetics and maps
                     <br>
-                    + <a href="https://docs.google.com/presentation/d/1l889Jg2a0nO5NaXmhNZ6itzBA5q9MK6aaI_SYzPm4OM/edit?usp=sharing" target="_blank">Talk</a>: University of Oregon Department of Geography, February 2017 - Exploring Technology's Relationship with Traditional and Web Cartography (as well as how concepts relate to education)
+                    + <a href="https://docs.google.com/presentation/d/1l889Jg2a0nO5NaXmhNZ6itzBA5q9MK6aaI_SYzPm4OM/edit?usp=sharing" target="_blank">Talk</a>: U of Oregon Dpt of Geography, Feb 2017 - Exploring Technology's Relationship with Traditional and Web Cartography... and Education
                     <br>
                     
                   
