--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <p class="large text-muted">
-                    + Upcoming <a href="https://nacis2019.sched.com/event/Rqpq/practical-cartography-day-late-afternoon-session" target="_blank">Talk</a>: NACIS 2019, Recreating Map Monsters<br> (and Other Useful Design Tips)
+                    +<a href="https://nacis2019.sched.com/event/Rqpq/practical-cartography-day-late-afternoon-session" target="_blank">Talk</a>: October NACIS 2019, Recreating Map Monsters<br> (and Other Useful Design Tips)
                     <br>
                      + <a href="https://atlasofdesign.bigcartel.com/" target="_blank">Volunteer</a>: An editor for the upcoming Atlas of Design, Volume 5
                      <br>
