--- a/sites/dorian/index.html
+++ b/sites/dorian/index.html
@@ -103,7 +103,7 @@
   <body>
     <div id="map"></div>
     <div id="story"></div>
-    <script src="https://github.com/vknoppkewetzel/vknoppkewetzel.github.io/blob/master/sites/dorian/config.js"></script>
+    <script src="./config.js"></script>
     <script>
       var layerTypes = {
         fill: ['fill-opacity'],
