--- a/index.html
+++ b/index.html
@@ -571,6 +571,8 @@
                     <p class="large text-muted">
                     + <a href="https://www.maps.com/blogs/journeys/five-women-geospatial-industry" target="_blank">Featured:</a> Maps.com, "Highlighting Five Fantastic Women in the Geospatial Industry" 
                     <br>
+			+ <a href="https://atlasofdesign.org/about/" target="_blank">Editor:</a> Atlas of Design, Volume 5 
+                    <br>
                     + <a href="https://www.routledge.com/GIS-Cartography-A-Guide-to-Effective-Map-Design-Third-Edition/Peterson/p/book/9780367857943" target="_blank">Published:</a> Cover art and interior map in GIS Cartography: A Guide to Effective Map Design, Third Edition 
                     <br>
                     + <a href="https://issuu.com/stampamedianet/docs/kjhgkujhvg" target="_blank">Interview:</a> Printlovers magazine
