--- a/index.html
+++ b/index.html
@@ -527,6 +527,10 @@
                 <br>
                 + <a href="https://nacis.org/about/people" target="_blank">Director at Large</a>, North American Cartographic Information Society
                 <br>
+                + <a href="https://nacis2021.sched.com/event/lXP3/panel-a-more-inclusive-career-panel" target="_blank">Panelist</a> 2021, A more inclusive career panel
+                <br>
+                + <a href="https://www.youtube.com/watch?v=Sl2YU2Q5ZMw" target="_blank">Speaker</a> 2021, How do you create a map for someone who cannot read?
+                <br>
                 + <a href="https://www.youtube.com/watch?v=yrQBUHwdV40" target="_blank">Speaker</a> 2020, Recreating Vintage Map Aesthetic Elements<br>in Adobe Illustrator
                 <br>
                 + <a href="https://www.youtube.com/watch?v=ihNFKUue9a0" target="_blank">Speaker</a>, NACIS 2020, How to talk about maps (design critique)
@@ -579,6 +583,8 @@
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <p class="large text-muted">
+                    + <a href="https://dcfemtech.com/awards" target="_blank">Featured:</a> DCFemTech, 2021 Design Award Winner  
+                        <br>
                     + <a href="https://www.maps.com/blogs/journeys/five-women-geospatial-industry" target="_blank">Featured:</a> Maps.com, "Highlighting Five Fantastic Women in the Geospatial Industry" 
                     <br>
 			+ <a href="https://atlasofdesign.org/about/" target="_blank">Editor:</a> Atlas of Design, Volume 5 
@@ -643,13 +649,31 @@
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <!-- one -->
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/GIN.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>November 2021 - present</h4>
+                                    <h4 class="subheading">Associate Director</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        Associate Director of nonprofit GreenInfo Network, providing geospatial and related information technology support to public interest organizations and agencies. Staff of 15 specialists work for 100 groups annually, including those engaged in environment, land and water conservation, public health, social justice, and philanthropy. Personal specialties include strategic communications and messaging, data-driven storytelling, interactive and print cartography, visual design for print and presentation, community-building, software training, and spatial education.  
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+
+
                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/gwu.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>January 2021 - present</h4>
+                                    <h4>January 2021 - November 2021</h4>
                                     <h4 class="subheading">Adjunct Professor: Cartography and Geovizualization</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -668,12 +692,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>September 2019 - Present</h4>
+                                    <h4>September 2019 - September 2021</h4>
                                     <h4 class="subheading">Senior Map Designer</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        At Mapbox, I help create and execute the design vision for maps that users around the world can use out-of-the-box or customize using Studio, Mapbox' design software, or our APIs and SDKs. On a regular basis, I quality check data in collaboration with our data team, assess user experience in Studio, help build new components for Style Components, and consult on map design, as well as create new styles. 
+                                        Leading product and map design for new and innovative solutions for a variety of internal and custom projects, from updating and building new design interfaces that provided cartographically sound design choices that helped create map templates for general-use customers, to creating either custom-built user interfaces for navigation design, or customized map designs for a variety of customers (navigation, disaster mapping, weather, newsroom, and more) using Mapbox Studio and GL JS. Also helped to build education modules about cartography and Mapbox Studio.  
                                     </p>
                                 </div>
                             </div>
