--- a/index.html
+++ b/index.html
@@ -642,7 +642,16 @@
                     <h3 class="section-subheading text-muted">
                     Click <a href="img/portfolio/full/resume.pdf" target="_blank"><b>HERE</a></b> for a more detailed, printable CV.
                     <br><Br>
-                        I'm a detail-oriented cartographer, analyst and designer and I am passionate about creating visual stories. Whether on my own or working collaboratively, I enjoy finding creative solutions for all data visualization goals. </h3>
+                        I am detail-oriented cartographer,
+analyst, and designer who is
+passionate about aesthetics,
+storytelling, and education.<br>
+My education-oriented work
+anchors on the belief that everyone
+can become a better analyst,
+designer, and storyteller - even if
+they never have been in the spatial
+industry </h3>
                 </div>
             </div>
             <div class="row">
