--- a/index.html
+++ b/index.html
@@ -649,9 +649,9 @@ storytelling, and education.<br>
 My education-oriented work
 anchors on the belief that everyone
 can become a better analyst,
-designer, and storyteller - even if
+designer, and storyteller<br> - even if
 they never have been in the spatial
-industry </h3>
+industry. </h3>
                 </div>
             </div>
             <div class="row">
