--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </li>
           
 					<li>
-                        <a href="./VKW_MSthesis.pdf" target="_blank">MS Thesis</a></a>
+                        <a href="./VKW_MS.pdf" target="_blank">MS Thesis</a></a>
                     </li>
            
                 </ul>
