--- a/index.html
+++ b/index.html
@@ -565,6 +565,8 @@
             <!--   <div class="col-lg-8 mx-auto text-center"> -->
             <div class="col-sm-6 portfolio-item">
                 <p class="large text-muted">
+                + <a href="https://creativecarto.github.io" target="_blank"> Founder</a>, Lift then Eat, 2019 - present: A gym community built around friendship that started while lifting in Balance Gym, DC.
+                 <br>
                 + <a href="https://www.youtube.com/watch?v=lFkwCdH5B7g" target="_blank">Speaker</a>, NACIS 2018, Branding in Cartography
                 <br>
                 + <a href="https://www.youtube.com/watch?v=EhjBcCtWoBw" target="_blank">Speaker</a>, NACIS 2018, (A Woman’s) Cartographic Perspective
