--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@ industry. </h3>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://twitter.com/run_for_funner"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://bsky.app/profile/run-for-funner.bsky.social"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="https://github.com/vknoppkewetzel"><i class="fa fa-github"></i></a>
                         </li>
