--- a/index.html
+++ b/index.html
@@ -661,16 +661,11 @@
                     <h3 class="section-subheading text-muted">
                     Click <a href="img/portfolio/full/resume.pdf" target="_blank"><b>HERE</a></b> for a more detailed, printable CV.
                     <br><Br>
-                        I am detail-oriented cartographer,
-analyst, and designer who is
-passionate about aesthetics,
-storytelling, and education.<br>
-My education-oriented work
-anchors on the belief that everyone
-can become a better analyst,
-designer, and storyteller<br> - even if
-they never have been in the spatial
-industry. </h3>
+                        Vanessa Knoppke-Wetzel (she/they) has spent a career thinking deeply about data, tools, applications, research, and operational change - all through the lens of a cartographer. 
+<br>
+In the cartography industry, she is known for her expertise and discussions around aesthetics over time, and what affects technological shifts has on design and product workflows; cartography and branding; mapping tools' UI/UX, product design, and user research; equity and inclusion; and accessibility design.
+<br>
+Cartography also informed her expertise beyond the geospatial. Cartography is not only rooted in cognition and design, but also in finding patterns, connections, and meaning behind complex and interconnected data layers. The ability to sift through complex information to tease out problems to solve them is possible because of Cartography being rooted in analysis, design, and communication.  </h3>
                 </div>
             </div>
             <div class="row">
